--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="/style.css" />
   <script defer src="/bundle.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 </head>
 
 <body>
